# idx-one-percent

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml  skills-lock.json  task.py
.github/workflows/: ci.yml
analyzer/: __init__.py  config.py  data_loader.py  entity_resolver.py  reporter.py  search.py  styles.tcss  tui.py
onepercent-data/: 27-February-2026.xlsx  29-May-2026.xlsx  30-April-2026.xlsx  30-June-2026.xlsx  31-March-2026.xlsx
tests/: __init__.py  test_config.py  test_data_loader.py  test_entity_resolver.py  test_reporter.py  test_search.py  test_tui.py
tui/: __init__.py  app.py  compare_all_view.py  dashboard_view.py  global_search_view.py  loading_view.py  styles.tcss  theme.py
